@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.2 2001/05/09 11:29:11 agc Exp $
+$NetBSD: distinfo,v 1.3 2003/02/14 02:50:08 hubertf Exp $
 
-SHA1 (xhippo-2.0.tar.gz) = a4171b751307f5ca482756691d80c8cf14231d15
-Size (xhippo-2.0.tar.gz) = 142276 bytes
+SHA1 (xhippo-3.3.tar.gz) = 15fb21a9027110f1f7b8e17dc33be6c28a67c601
+Size (xhippo-3.3.tar.gz) = 417111 bytes
