@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.1354 2003/02/14 01:40:18 dmcmahill Exp $
+$NetBSD: CHANGES,v 1.1355 2003/02/14 02:50:06 hubertf Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -601,5 +601,6 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated gnome2-pixmaps to 2.2.0.1 [jmmv 2003-02-13]
 	Updated libwnck to 2.2.1 [jmmv 2003-02-13]
 	Updated rdesktop to 1.2 [grant 2003-02-13]
-	Updated aim to 1.5.277 [fredb 2003-02-14]
 	Added matlab-mode-2.3 [dmcmahill 2003-02-13]
+	Updated aim to 1.5.277 [fredb 2003-02-14]
+	Updated xhippo 3.3 [hubertf 2003-02-14]
